tests/fsharp/typecheck/init-property/niceinit.bsl

niceinit.fsx(3,25,3,28): typecheck error FS0495: The object constructor 'NiceInit' has no argument or settable return property 'Val'. The required signature is NiceInit() : NiceInit.

niceinit.fsx(6,1,6,14): typecheck error FS0810: Property 'Val' cannot be set

niceinit.fsx(13,47,13,50): typecheck error FS0495: The member or object constructor 'mkInlineNiceInit' has no argument or settable return property 'Val'. The required signature is static member StraightNewFactory.mkInlineNiceInit : unit -> NiceInit.

niceinit.fsx(14,41,14,44): typecheck error FS0495: The member or object constructor 'mkNiceInit' has no argument or settable return property 'Val'. The required signature is static member StraightNewFactory.mkNiceInit : unit -> NiceInit.

niceinit.fsx(26,73,26,76): typecheck error FS0495: The member or object constructor 'mkInlineNiceInit' has no argument or settable return property 'Val'. The required signature is static member IntermediateVariableWithInterleavedOpFactory.mkInlineNiceInit : unit -> NiceInit.

niceinit.fsx(27,67,27,70): typecheck error FS0495: The member or object constructor 'mkNiceInit' has no argument or settable return property 'Val'. The required signature is static member IntermediateVariableWithInterleavedOpFactory.mkNiceInit : unit -> NiceInit.
